<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:orientation="horizontal"
    tools:ignore="UseCompoundDrawables">

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:contentDescription="@string/app_icon_description"
        android:transitionName="@string/app_icon_transition_name"
        app:srcCompat="@android:drawable/sym_def_app_icon"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:ellipsize="end"
        android:focusableInTouchMode="false"
        android:padding="8dp"
        android:singleLine="true"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:transitionName="@string/app_name_transition_name"
        tools:targetApi="lollipop"
        tools:text="Settings" />
</LinearLayout>